{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "1edcf3ba-a217-40c6-948a-b058b2da0e26",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "29d838e4-3bff-4359-937c-8c72a8ba43dc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "88f0a169-b2e3-4526-83ad-af4b37613312",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "36335cca-70ec-41bf-80d7-3bcfc064590c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Finish",
                    "type": "Button",
                    "id": "f6b719a7-9cd1-4745-bfd5-f57a11ab8ba2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "0567ab9e-9bec-4ea9-8585-45ba94a5842c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RighClick",
                    "type": "Button",
                    "id": "44903d7d-1bf0-4df4-88b2-eb5f4c5dbb86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "36d3799e-1a5f-4d33-8cac-5fe8b2c36e90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnBug",
                    "type": "Button",
                    "id": "8a2be605-792d-4713-bf1d-a0ef2c732ab2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ac94d20-205d-4d78-933b-7dd1eec307e3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ZQSD",
                    "id": "1af45066-055f-4e7f-9b02-829cc75007a5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "53b76c11-fb22-4fbf-aaac-04678b9e9fba",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a31cd331-683a-4dd6-9761-f75f5bb67673",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9f014b6a-17d1-489e-a8b1-4343abd9a842",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ee2e8566-b308-4ff9-a636-ed281bbd95f8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b1a59ab8-02f8-456e-b505-e587bcef08e4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbda8934-e0c2-42d6-a3e9-87a96ebba67a",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53fe3676-5b67-49d6-a648-2b9dea7946ff",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bb4dbf1-08ad-4774-900f-227233aeeb8c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RighClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "261bf8c8-0103-48da-a5e2-778f1524fcfc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7668e02-6fe1-47f1-88bd-35786273d370",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnBug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}